<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context=".FormIngresoDocumentoActivity">

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/Theme.MyTheme.AppBarOverlay">

        <include
            android:id="@+id/app_bar"
            layout="@layout/app_bar" />

    </android.support.design.widget.AppBarLayout>

    <RelativeLayout
        android:id="@+id/relative_layout_principal"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/linear_layout_datos_personales"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:background="#FFF"
            android:elevation="10dp"
            android:padding="5dp"
            android:orientation="vertical">

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp">

                <EditText
                    android:id="@+id/et_numero_documento"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/txt_numero_documento"
                    android:inputType="textCapCharacters" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp">

                <EditText
                    android:id="@+id/et_numero_celular"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/txt_numero_celular"
                    android:inputType="phone"
                    android:maxLength="14"
                    android:paddingBottom="9dp"
                    android:paddingTop="6dp" />
            </android.support.design.widget.TextInputLayout>

            <Button
                android:id="@+id/btn_enviar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/txt_enviar"
                android:textColor="@color/colorCeleste"
                android:elevation="10dp"
                style="?android:attr/borderlessButtonStyle"
                android:layout_gravity="right" />
        </LinearLayout>


    </RelativeLayout>


</android.support.design.widget.CoordinatorLayout>
